# fix-includes

./: .clang-format  CMakeLists.txt  Makefile  README.md  category.cpp  category.hpp  fix_includes.cpp  fix_includes.hpp  main.cpp  source_file.cpp  source_file.hpp  util.cpp  util.hpp
tests/fix_and_compare_test/: .fix-includes
tests/fix_and_compare_test/canon/: first.cc  first.hh  second.cpp  second.hpp  third.c  third.h
tests/fix_and_compare_test/original/: first.cc  first.hh  second.cpp  third.c  third.h
